# pa-trading

./: pyproject.toml
docs/: README.md
pa_tk/: pa.py  pb.py
pa_tk/_pb/: pullback.py
pa_trading/: __init__.py  b.py  conf.py  l.py  p2.py  pa.py  pb.py  ro.py  tr.py
pa_trading/_pb/: __init__.py  pullback.py
tests/: test_pa.py
