[tool.poetry]
name = "pa-trading"
version = "0.2.0"
description = "Comandos para cálculos price action - tool kit de comandos"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
readme = "README.md"
packages = [{include = "pa_trading"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pa = "pa_trading.pa:cli"
