[tool.poetry]
name = "pa-trading"
version = "0.4.1"
description = "Comandos para cálculos de price action"
authors = ["Valmir Franca <vfranca3@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/vfranca/pa-trading"
keywords = ["CLI", "trading"]
packages = [{include = "pa_trading"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pa = "pa_trading.pa:pa"
